k8s-gke/customer-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: customer
  namespace: ecommerce

spec:
  replicas: 1

  selector:
    matchLabels:
      app: customer

  template:
    metadata:
      labels:
        app: customer

    spec:
      containers:
        - name: customer
          image: asia-south1-docker.pkg.dev/project-b1401e3c-6c22-44e2-ba6/ecommerce-repo/customer:latest
          ports:
            - containerPort: 8001
