k8s-gke/eureka-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: eureka-server
  namespace: ecommerce

spec:
  replicas: 1

  selector:
    matchLabels:
      app: eureka-server

  template:
    metadata:
      labels:
        app: eureka-server

    spec:
      containers:
        - name: eureka-server
          image: asia-south1-docker.pkg.dev/project-b1401e3c-6c22-44e2-ba6/ecommerce-repo/eureka-server:latest
          ports:
            - containerPort: 8761
