k8s-gke/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: gateway
  namespace: ecommerce

spec:
  replicas: 1

  selector:
    matchLabels:
      app: gateway

  template:
    metadata:
      labels:
        app: gateway

    spec:
      containers:
        - name: gateway
          image: asia-south1-docker.pkg.dev/project-b1401e3c-6c22-44e2-ba6/ecommerce-repo/gateway:latest

          ports:
            - containerPort: 8006
