k8s-gke/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres
  namespace: ecommerce

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
        - name: postgres
          image: postgres:14.5-alpine

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-storage
              mountPath: /data

            - name: postgres-init
              mountPath: /docker-entrypoint-initdb.d

      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc

        - name: postgres-init
          configMap:
            name: postgres-init
