k8s-gke/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: rabbitmq
  namespace: ecommerce

spec:
  replicas: 1

  selector:
    matchLabels:
      app: rabbitmq

  template:
    metadata:
      labels:
        app: rabbitmq

    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.9.20-management-alpine

          ports:
            - containerPort: 5672
            - containerPort: 15672
