k8s-gke/zipkin-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: zipkin
  namespace: ecommerce

spec:
  replicas: 1

  selector:
    matchLabels:
      app: zipkin

  template:
    metadata:
      labels:
        app: zipkin

    spec:
      containers:
        - name: zipkin
          image: openzipkin/zipkin

          ports:
            - containerPort: 9411
