k8s-gke/customer-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: customer
  namespace: ecommerce

spec:
  type: ClusterIP

  selector:
    app: customer

  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
