k8s-gke/eureka-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: eureka-server
  namespace: ecommerce

spec:
  type: ClusterIP

  selector:
    app: eureka-server

  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
