k8s-gke/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend
  namespace: ecommerce

spec:
  type: ClusterIP

  selector:
    app: frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
