k8s-gke/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: ecommerce
  annotations:
    cloud.google.com/backend-config: '{"default":"gateway-backendconfig"}'
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 8006
      targetPort: 8006
