k8s-gke/notification-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: notification
  namespace: ecommerce

spec:
  type: ClusterIP

  selector:
    app: notification

  ports:
    - protocol: TCP
      port: 8004
      targetPort: 8004
