k8s-gke/order-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: order
  namespace: ecommerce

spec:
  type: ClusterIP

  selector:
    app: order

  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
