k8s-gke/postgres-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres
  namespace: ecommerce

spec:
  type: ClusterIP

  selector:
    app: postgres

  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
