k8s-gke/product-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: product
  namespace: ecommerce

spec:
  type: ClusterIP

  selector:
    app: product

  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
