k8s-gke/rabbitmq-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: rabbitmq
  namespace: ecommerce

spec:
  type: ClusterIP

  selector:
    app: rabbitmq

  ports:
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672

    - name: management
      protocol: TCP
      port: 15672
      targetPort: 15672
