k8s-gke/zipkin-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: zipkin
  namespace: ecommerce

spec:
  type: ClusterIP

  selector:
    app: zipkin

  ports:
    - protocol: TCP
      port: 9411
      targetPort: 9411
