k8s-gke/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ecommerce-ingress
  namespace: ecommerce

  annotations:
    kubernetes.io/ingress.class: gce

spec:

  rules:

    - http:

        paths:

          # Frontend UI
          - path: /*
            pathType: ImplementationSpecific

            backend:
              service:
                name: frontend
                port:
                  number: 80

          # Customer API
          - path: /customer/*
            pathType: ImplementationSpecific

            backend:
              service:
                name: gateway
                port:
                  number: 8006

          # Product API
          - path: /product/*
            pathType: ImplementationSpecific

            backend:
              service:
                name: gateway
                port:
                  number: 8006

          # Order API
          - path: /order/*
            pathType: ImplementationSpecific

            backend:
              service:
                name: gateway
                port:
                  number: 8006
